updated the workflow to run on every push

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,9 @@
 name : Build Suceed on PR
 
 on:
+  push:        # runs on every push to origin
+    branches:
+      -master  
   pull_request:
     branches:
       -master
