--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcryptjs": "^3.0.3",
     "gsap": "^3.13.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.553.0",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
