--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
+    "date-fns": "^4.1.0",
     "gsap": "^3.13.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.553.0",
