--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
     "react-redux": "^9.2.0",
+    "recharts": "^3.5.1",
     "three": "^0.181.1",
     "zod": "^4.1.12"
   },
